  - Updated IO::Socket::SSL requirement to 1.75 for IO::Socket::IP support.
  - Switched back from IO::Socket::INET6 to IO::Socket::IP for IPv6 support.
  - Switched from HMAC-MD5 to HMAC-SHA1 for signed cookies.
  - Added j and r functions to ojo. (sharifulin, sri)
  - Added accept_interval attribute to Mojo::IOLoop.
  - Added support for new HTTP status code.
  - Modernized ".perltidyrc".
  - Improved not found page to highlight custom route names.
  - Improved to method in Mojolicious::Routes::Route to give easier access to
    default parameters.
  - Improved message parser performance slightly.
  - Improved documentation. (ichesnokov, sri)
  - Improved tests.
  - Fixed bug that prevented sessions from working in embedded applications.
  - Fixed JSON Pointer escaping.
  - Fixed small JSON Pointer bug in get command. (avkhozov)
  - Fixed small application initialization bug in Mojo::Server.

2.98  2012-05-30
  - Switched from IO::Socket::IP to IO::Socket::INET6 for IPv6 support.
  - Improved IPv6 exception handling in Mojo::IOLoop::Client.
  - Improved documentation.
  - Improved tests.
  - Fixed array appending bug in Mojo::Parameters.

2.97  2012-05-28
  - Added workaround to make IO::Socket::SSL work with IO::Socket::IP.
  - Removed Bonjour support.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that prevented Test::Mojo from working with normal Mojolicious
    applications that use Mojolicious::Plugin::Config.
  - Fixed a few small Unicode bugs in documentation.

2.96  2012-05-21
  - Added merge method to Mojo::Path.
  - Improved documentation.
  - Improved tests.
  - Fixed small memory leak in Mojolicious.
  - Fixed small bug that prevented already prepared IO::Socket::SSL handles to
    be used by Mojo::UserAgent.
  - Fixed small Mojo::URL and Mojo::Path stringification bugs.

2.95  2012-05-10
  - Improved documentation.
  - Fixed bug that caused inactivity timeouts to be logged too often.

2.94  2012-05-09