@@ -17,6 +17,8 @@
   - Added accept_interval attribute to Mojo::IOLoop.
   - Added support for new HTTP status code.
   - Modernized ".perltidyrc".
+  - Improved Mojo::IOLoop::Server to prioritize RC4 cipher, which mitigates
+    the BEAST attack.
   - Improved not found page to highlight custom route names.
   - Improved to method in Mojolicious::Routes::Route to give easier access to
     default parameters.
